--- a/MassEmailSender/packages.config
+++ b/MassEmailSender/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="1.6.2" targetFramework="net40-client" developmentDependency="true" requireReinstallation="true" />
-  <package id="EPPlus" version="4.1.0" targetFramework="net40-client" />
+  <package id="EPPlus.Core" version="1.5.1" targetFramework="net45" />
   <package id="Fody" version="2.1.1" targetFramework="net452" developmentDependency="true" />
 </packages>
