--- a/MassEmailSender/MassEmailSender.csproj
+++ b/MassEmailSender/MassEmailSender.csproj
@@ -72,20 +72,34 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExcelUltility.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="Forms\LogViewer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Forms\LogViewer.Designer.cs">
+      <DependentUpon>LogViewer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Logger\ILogger.cs" />
+    <Compile Include="Logger\LogManager.cs" />
+    <Compile Include="Logger\NewLogEventArgs.cs" />
+    <Compile Include="Logger\OnNewLogHandler.cs" />
+    <Compile Include="Logger\SimpleLogger.cs" />
     <Compile Include="MailJob.cs" />
-    <Compile Include="MainForm_Methods.cs">
+    <Compile Include="Forms\MainForm_Methods.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmtpMailSender.cs" />
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Forms\LogViewer.resx">
+      <DependentUpon>LogViewer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
