--- a/MassEmailSender/packages.config
+++ b/MassEmailSender/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net45" />
-  <package id="Costura.Fody" version="1.6.2" targetFramework="net40-client" developmentDependency="true" requireReinstallation="true" />
-  <package id="EPPlus.Core" version="1.5.1" targetFramework="net45" />
-  <package id="Fody" version="2.1.1" targetFramework="net452" developmentDependency="true" />
-  <package id="MailKit" version="1.16.2" targetFramework="net45" />
-  <package id="MimeKit" version="1.16.2" targetFramework="net45" />
+  <package id="Costura.Fody" version="1.6.2" targetFramework="net45" developmentDependency="true" />
+  <package id="EPPlus.Core" version="1.5.2" targetFramework="net45" />
+  <package id="Fody" version="2.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="MailKit" version="1.18.0" targetFramework="net45" />
+  <package id="MimeKit" version="1.18.0" targetFramework="net45" />
 </packages>
