--- a/MassEmailSender/packages.config
+++ b/MassEmailSender/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net45" />
   <package id="Costura.Fody" version="1.6.2" targetFramework="net45" developmentDependency="true" />
-  <package id="EPPlus.Core" version="1.5.2" targetFramework="net45" requireReinstallation="true" />
-  <package id="Fody" version="2.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="MailKit" version="1.18.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="MimeKit" version="1.18.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="EPPlus.Core" version="1.5.2" targetFramework="net45" />
+  <package id="Fody" version="2.1.2" targetFramework="net45" developmentDependency="true" />
+  <package id="MailKit" version="1.18.0" targetFramework="net45" />
+  <package id="MimeKit" version="1.18.0" targetFramework="net45" />
 </packages>
